# OOP-Harchuk-Oleksandr-

./: .gitignore
hw4/: README.MD
hw5/: README.MD
hw6/: README.MD
hw7/: README.MD  main.cpp  notREf.cpp
hw7/src/: EmailService.h  Order.h  OrderRepository.h  OrderService.h  OrderValidator.h
hw8/: README.MD
lab23v7/: CarManager.cpp  README.MD  refCarManager.cpp
lab24/: README.MD  numericOperation.cpp
lab25/: 4patern.cpp  README.MD
lab28v17/: CmakeLists.txt  README.MD  job.cpp  jobs.json
lab30v16/: CMakeLists.txt  README.MD  ageCalc.cpp
lab31v16/: FileService.cpp  FileService.h
lab31v18/: CMakeLists.txt  FileService.cpp  FileService.h  Gmoqtests.cpp  README.MD
